--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,8 +4,8 @@ phases:
   install:
     commands:
       - echo Installing NGINX...
-      - sudo apt-get update
-      - sudo apt-get install nginx1 -y
+      - sudo yum update -y
+      - sudo amazon-linux-extras install nginx1 -y
   pre_build:
     commands:
       - echo "Starting pre-build phase..."
